@@ -2,6 +2,7 @@ APM 1.0.0beta3
 ----------------------------
 Added:
 - MySQL driver
+- Per driver error reporting level
 
 Changed:
 - Code refactored to make use of 'APM drivers'
